--- a/ejemplo/view/LoginView.xaml
+++ b/ejemplo/view/LoginView.xaml
@@ -6,35 +6,38 @@
         xmlns:customcontrols="clr-namespace:ejemplo.CustomControls"
         mc:Ignorable="d"
         Title="LoginView" Height="450" Width="800"
+        ResizeMode="CanMinimize"
         WindowStyle="None"
         WindowStartupLocation="CenterScreen"
         Background="Transparent"
         AllowsTransparency="True">
     
     <Border CornerRadius="12">
-        <Border.Background>
+        <!--<Border.Background>
             <ImageBrush ImageSource="/images/imagen.png" Stretch="None"></ImageBrush>
-        </Border.Background>
+        </Border.Background>-->
         
-        <Border CornerRadius="10" BorderThickness="2" Opacity="0.95" >
-            <Border.BorderBrush >
-                <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+        <Border CornerRadius="10" BorderThickness="2" Opacity="1" >
+            <Border.BorderBrush>
+                <SolidColorBrush Color="#19183B"/>
+                <!--<LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
                     <GradientStop Color="#462AD8" Offset="0" />
                     <GradientStop Color="#DA34AE" Offset="0.75" />
                     <GradientStop Color="#8A16C1" Offset="1" />
-                </LinearGradientBrush>
+                </LinearGradientBrush>-->
             </Border.BorderBrush>
             <Border.Background>
-                <LinearGradientBrush StartPoint="0.1,0" EndPoint="1,1">
+                <SolidColorBrush Color="#19183B"/>
+                <!--<LinearGradientBrush StartPoint="0.1,0" EndPoint="1,1">
                     <GradientStop Color="#060531" Offset="0" />
                     <GradientStop Color="LightBlue" Offset="0.75" />
                     <GradientStop Color="AliceBlue" Offset="1" />
-                </LinearGradientBrush>
+                </LinearGradientBrush>-->
             </Border.Background>
 
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="30" />
+                    <RowDefinition Height="40" />
                     <RowDefinition />
                 </Grid.RowDefinitions>
                 <Grid Grid.Row="0">
@@ -44,9 +47,9 @@
                         <ColumnDefinition Width="25" />
                         <ColumnDefinition Width="5" />
                     </Grid.ColumnDefinitions>
-                    <TextBlock Text="LOGIN"
-                               Foreground="AntiqueWhite"
-                               FontSize="15"
+                    <TextBlock Text="Iniciar sesion"
+                               Foreground="#E7F2EF"
+                               FontSize="20"
                                FontFamily="Monserrat"
                                Grid.Column="0"
                                VerticalAlignment="Center"
@@ -54,25 +57,25 @@
                     <Button x:Name="btn_Minimizar"
                             BorderThickness="0"
                             Content="-"
-                            Foreground="Orange"
-                            FontSize="16"
+                            Foreground="#E7F2EF"
+                            FontSize="20"
                             FontFamily="Monserrat"
                             Cursor="Hand"
                             Grid.Column="1"
                             Click="btn_Minimizar_Click">
                         <Button.Style>
                             <Style TargetType="Button">
-                                <Setter Property="Background" Value="LightGray" />
+                                <Setter Property="Background" Value="#19183B" />
                                 <Style.Triggers>
                                     <Trigger Property="IsMouseOver" Value="True">
-                                        <Setter Property="Background" Value="Wheat"/>
+                                        <Setter Property="Background" Value="#708993"/>
                                     </Trigger>
                                 </Style.Triggers>
                             </Style>
                         </Button.Style>
                         <Button.Template>
                             <ControlTemplate TargetType="Button">
-                                <Border Width="18" Height="18" CornerRadius="9"
+                                <Border Width="18" Height="18"
                                         Background="{TemplateBinding Background}">
                                     <ContentPresenter VerticalAlignment="Center"
                                                       HorizontalAlignment="Center">
@@ -85,25 +88,25 @@
                     <Button x:Name="btn_cerrar"
                             BorderThickness="0"
                             Content="x"
-                            Foreground="Red"
-                            FontSize="16"
+                            Foreground="#E7F2EF"
+                            FontSize="20"
                             FontFamily="Monserrat"
                             Cursor="Hand"
                             Grid.Column="2"
                             Click="btn_cerrar_Click">
                         <Button.Style>
                             <Style TargetType="Button">
-                                <Setter Property="Background" Value="LightGray"/>
+                                <Setter Property="Background" Value="#19183B"/>
                                 <Style.Triggers>
                                     <Trigger Property="IsMouseOver" Value="True">
-                                        <Setter Property="Background" Value="IndianRed"/>
+                                        <Setter Property="Background" Value="#708993"/>
                                     </Trigger>
                                 </Style.Triggers>
                             </Style>
                         </Button.Style>
                         <Button.Template>
                             <ControlTemplate TargetType="Button">
-                                <Border Width="18" Height="18" CornerRadius="9"
+                                <Border Width="18" Height="18"
                                         Background="{TemplateBinding Background}">
                                     <ContentPresenter VerticalAlignment="Center"
                                                       HorizontalAlignment="Center"/>
@@ -116,28 +119,21 @@
                             Grid.Row="1"
                             Orientation="Vertical"
                             Margin="0,35,0,0">
-                    <Image Source="/images/icon.png" Width="100" Height="100" />
-                    <TextBlock Text="Ingeneria de Software"
+                    <Image Source="/images/icon.jpg" Width="100" Height="100" />
+                    <TextBlock Text="Iniciar sesion"
                                Foreground="White"
                                FontSize="20"
                                FontFamily="Monserrat"
                                HorizontalAlignment="Center">
-                        
-                    </TextBlock>
-                    <TextBlock Text="Julio Aquino 5° A"
-                               Foreground="LightCyan"
-                               FontSize="12"
-                               FontFamily="Monserrat"
-                               TextWrapping="Wrap"
-                               TextAlignment="Center"
-                               Margin="0,5,0,0" >
+
                     </TextBlock>
                     <TextBlock Text="Username"
-                            Foreground="LightGray"
-                                FontWeight="Medium"
-                        FontFamily="Monserrat"
-                        Margin="0,5,0,0" />
-                    <TextBox x:Name="Username"
+                               Foreground="#E7F2EF"
+                               FontSize="15"
+                               FontWeight="Medium"
+                               FontFamily="Montserrat"
+                               Margin="0,15,0,0" />
+                    <!--<TextBox x:Name="Username"
                              Text="{Binding Username,
                              UpdateSourceTrigger=PropertyChanged}"
                              FontFamily="Monserrat"
@@ -156,15 +152,43 @@
                                         Stretch="None"
                                         AlignmentX="Left"/>
                         </TextBox.Background>
-                        
-                    </TextBox>
-                    <TextBlock Text="Password"
-                               Foreground="LightGray"
+
+                    </TextBox>-->
+
+                    <!--<ListBox SelectionMode="Multiple"
+                             Height="25"
+                             VerticalAlignment="Center"
+                             Margin="0,5,0,0"
+                             Padding="20,0,0,0">
+                        <ListBoxItem Content="Elemento A" />
+                        <ListBoxItem Content="Elemento B" />
+                    </ListBox>-->
+
+                    <ComboBox x:Name="dept" Width="220" Height="25"
+                              FontFamily="Monserrat"
+                              FontSize="15"
+                              FontWeight="Medium"
+                              Foreground="Black"
+                              BorderBrush="#E7F2EF"
+                              BorderThickness="0,0,0,2"
+                              VerticalAlignment="Center"
+                              HorizontalAlignment="Left"
+                              Margin="0,5,0,0"
+                              Padding="20,0,0,0">
+
+                        <ComboBoxItem Content="amin" Tag="admin"/>
+                        <ComboBoxItem Content="Finanzas" Tag="Finazas"/>
+
+                    </ComboBox>
+
+                    <TextBlock Text="Contraseña"
+                               Foreground="#E7F2EF"
                                FontSize="15"
                                FontWeight="Medium"
                                FontFamily="Montserrat"
                                Margin="0,15,0,0"/>
                     <customcontrols:BindablePasswordBox
+                        x:Name="PasswordBox"
                         Password="{Binding Password,
                         Mode=TwoWay,
                         UpdateSourceTrigger=PropertyChanged}"
@@ -178,30 +202,31 @@
                                FontSize="12"
                                FontWeight="Medium"
                                FontFamily="Montserrat"
-                               Margin="0,10,0,0"
+                               Margin="0,20,0,0"
                                TextWrapping="Wrap"/>
                     <Button x:Name="btnLogin"
                             Command="{Binding LoginCommand}"
                             BorderThickness="0"
-                            Content="LOGIN"
-                            Foreground = "DarkGray"
+                            Content="Iniciar sesion"
+                            Foreground = "White"
                             FontSize="14"
                             FontFamily="Montserrat"
                             Cursor="Hand"
-                            >
+                            Click="btnLogin_Click">
+   
                         <Button.Style>
                             <Style TargetType="{x:Type Button}">
-                                <Setter Property="Background" Value= "#462AD8"/>
+                                <Setter Property="Background" Value= "#708993"/>
                                 <Style.Triggers>
                                     <Trigger Property="IsMouseOver" Value="True">
-                                        <Setter Property="Background" Value= "#28AEED"/>
+                                        <Setter Property="Background" Value= "#19183B"/>
                                     </Trigger>
                                 </Style.Triggers>
                             </Style>
                         </Button.Style>
                         <Button.Template>
                             <ControlTemplate TargetType="{x:Type Button}">
-                                <Border Width="150" Height="40" CornerRadius="20"
+                                <Border Width="200" Height="30" CornerRadius="10"
                                         Background="{TemplateBinding Background}">
                                     <ContentPresenter VerticalAlignment="Center"
                                                       HorizontalAlignment="Center"/>
