--- a/ejemplo/Views/AgregarPuesto.xaml
+++ b/ejemplo/Views/AgregarPuesto.xaml
@@ -98,9 +98,7 @@
                              FontSize="20" 
                              BorderBrush="#19183B" 
                              BorderThickness="1" 
-                             Padding="10"
-                             GotFocus="TextBox_GotFocus"
-                             LostFocus="TextBox_LostFocus"/>
+                             Padding="10"/>
 
                         <!-- Cuarta fila: Teléfono y Departamento -->
                         <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,0,0,20">
@@ -112,9 +110,7 @@
                                  FontSize="20"
                                  BorderBrush="#19183B"
                                  BorderThickness="1"
-                                 Padding="10"
-                                 GotFocus="TextBox_GotFocus"
-                                 LostFocus="TextBox_LostFocus"/>
+                                 Padding="10"/>
 
                             <TextBox x:Name="Vacantes" 
                                  Text="Vacantes"
@@ -124,9 +120,7 @@
                                  FontSize="20" 
                                  BorderBrush="#19183B" 
                                  BorderThickness="1" 
-                                 Padding="10"
-                                 GotFocus="TextBox_GotFocus"
-                                 LostFocus="TextBox_LostFocus"/>
+                                 Padding="10"/>
                         </StackPanel>
 
                         <!-- Quinta fila: Botones -->
