Se agrego la forma de cambiar entre pantallasy los data grid, asi como el estilo de este

--- a/ejemplo/App.xaml
+++ b/ejemplo/App.xaml
@@ -8,6 +8,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Styles/BottonStyles.xaml"/>
+                <ResourceDictionary Source="/Styles/TableStylesTablas.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
